--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     Hello to everybody!
-    <a href="/site01">site01</a>
+    <ul>
+        <li><a href="/site01">site01</a></li>
+        <li><a href="/site01">john</a></li>
 </body>
 </html>
