--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Hello to everybody!
     <ul>
         <li><a href="/site01">site01</a></li>
-        <li><a href="/site01">john</a></li>
+        <li><a href="/john">john</a></li>
     </ul>
 </body>
 </html>
