--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="/site01">site01</a></li>
         <li><a href="/john">john</a></li>
+        <li><a href="/grid">grid</a></li>
     </ul>
 </body>
 </html>
